--- a/client/main.html
+++ b/client/main.html
@@ -1,7 +1,8 @@
 <head>
-  <title>facebook</title>
+	<title>441 Facebook</title>
+	<meta name='viewport' content='width=device-width, initial-scale=1' />
 </head>
 
 <body>
-  <div id="content"></div>
+  	<div id="content"></div>
 </body>
